--- a/front/project.config.json
+++ b/front/project.config.json
@@ -10,7 +10,7 @@
     "include": []
   },
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": true,
     "enhance": true,
     "postcss": true,
@@ -36,7 +36,7 @@
       "disablePlugins": [],
       "outputPath": ""
     },
-    "useIsolateContext": true,
+    "useIsolateContext": false,
     "userConfirmedBundleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
@@ -49,7 +49,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wx41c2a4691ea219b7",
+  "appid": "wxbc468601e3ec81fd",
   "projectname": "chat-ui",
   "editorSetting": {
     "tabIndent": "insertSpaces",
