--- a/front/project.config.json
+++ b/front/project.config.json
@@ -49,7 +49,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wxbc468601e3ec81fd",
+  "appid": "wx41c2a4691ea219b7",
   "projectname": "chat-ui",
   "editorSetting": {
     "tabIndent": "insertSpaces",
