--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "fastify": "^4.13.0",
-    "openai": "^3.1.0"
+    "fastify": "^4.14.0",
+    "openai": "^3.1.0",
+    "uuid": "^9.0.0"
   }
 }
