--- a/front/project.config.json
+++ b/front/project.config.json
@@ -10,7 +10,7 @@
     "include": []
   },
   "setting": {
-    "urlCheck": false,
+    "urlCheck": true,
     "es6": true,
     "enhance": true,
     "postcss": true,
@@ -49,7 +49,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wx41c2a4691ea219b7",
+  "appid": "wx77d762e15e879092",
   "projectname": "chat-ui",
   "editorSetting": {
     "tabIndent": "insertSpaces",
