--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "run": "node ."
+    "start": "nodemon .",
+    "keygen": "node src/keygen.js"
   },
   "license": "MIT",
   "dependencies": {
+    "@fastify/jwt": "^6.7.0",
     "dotenv": "^16.0.3",
     "env-schema": "^5.2.0",
     "fastify": "^4.14.0",
+    "micromatch": "^4.0.5",
     "mongoose": "^7.0.0",
+    "nodemon": "^2.0.21",
     "openai": "^3.1.0",
+    "teeny-request": "^8.0.3",
     "uuid": "^9.0.0"
   }
 }
