新增加载历史消息

--- a/front/app.json
+++ b/front/app.json
@@ -16,7 +16,7 @@
   "useExtendedLib": {
     "weui": true
   },
-  "resizable": true,
+  "resizable": false,
   "style": "v2",
   "sitemapLocation": "sitemap.json"
 }
