--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "env-schema": "^5.2.0",
     "fastify": "^4.14.0",
+    "fastify-plugin": "^4.5.0",
     "micromatch": "^4.0.5",
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.21",
