--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@fastify/cors": "^8.2.1",
-    "@fastify/jwt": "^6.7.0",
+    "@fastify/cors": "^8.3.0",
+    "@fastify/jwt": "^7.0.0",
     "@fastify/rate-limit": "^8.0.0",
+    "@fastify/websocket": "^8.1.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "env-schema": "^5.2.0",
-    "fastify": "^4.14.0",
+    "fastify": "^4.17.0",
     "fastify-plugin": "^4.5.0",
     "micromatch": "^4.0.5",
     "mongoose": "^7.0.0",
